manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stressor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stressor-app
  template:
    metadata:
      labels:
        app: stressor-app
    spec:
      containers:
      - name: stressor-app
        image: registry.fibi.corp/sys/stressor-app:v0.0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "200m"
            memory: "128Mi"
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
