manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stressor-app
spec:
  selector:
    app: stressor-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
